# python-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-checks.yml
src/: main.py
src/config/: env.py
test/unit/: test_add.py
