[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.1",
    "pytest>=8.3.3",
    "ruff>=0.6.5",
]
pythonpath = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.mypy]
mypy_path = ["src"]
explicit_package_bases = true
no_implicit_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_no_return = true
warn_unreachable = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
line-length = 88
indent-width = 4

